@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.5</version>
+			<version>4.8.1</version>
 			<type>jar</type>
 			<scope>test</scope>
 			<optional>false</optional>
